--- a/HTML FILES/studentinfo.html
+++ b/HTML FILES/studentinfo.html
@@ -16,7 +16,7 @@
     <center><h1>Student Information</h1></center>
     <center><br>
 
-    <table class="table table-responsive" style="height:800px,width:800px">
+    <table class="table table-responsive" >
         <tr>
             <th>Name</th>
             <th>Roll No</th>
