--- a/VS CODE/studentinfo.html
+++ b/VS CODE/studentinfo.html
@@ -12,10 +12,10 @@
         }
         </style>
 </head>
-<body style="background-color:aliceblue">
-    <center> <nav class="navbar bg-primary">
+<body style="background-color:bisque">
+    <nav class="navbar bg-primary p-3">
       <label for="brand" class="navbar-brand">Student Management System</label>
-    </nav></center><br>
+    </nav><br>
  <div class="container">
     <table class="table table-responsive" >
         <tr>
@@ -28,7 +28,7 @@
         <tr>
             <td>Snehitha</td>
             <td>2003A51083</td>
-            <td>snehitha@gmai.com</td>
+            <td>snehitha@gmail.com</td>
             <td>9050604356</td>
         </tr>
 
