--- a/VS CODE/studentinfo.html
+++ b/VS CODE/studentinfo.html
@@ -24,6 +24,7 @@
             <th>Roll No</th>
             <th>Email-Id</th>
             <th>Phone.No</th>
+            <th>Action</th>
         </tr>
 
         <tr>
@@ -32,6 +33,8 @@
             <td>2003A51083</td>
             <td>snehitha@gmail.com</td>
             <td>9050604356</td>
+            <td><button type="button" class="btn btn-warning">Edit</button>
+                <button type="button" class="btn btn-danger">Delete</button></td>
         </tr>
 
 
@@ -41,6 +44,8 @@
             <td>2005A32005</td>
             <td>vinni@gmail.com</td>
             <td>9121546783</td>
+            <td><button type="button" class="btn btn-warning">Edit</button>
+                <button type="button" class="btn btn-danger">Delete</button></td>
         </tr>
 
 
@@ -49,7 +54,9 @@
             <td>Sriharsha</td>
             <td>2005A42024</td>
             <td>sriharsh@gmail.com</td>
-            <td>9887766543</<td
+            <td>9887766543</<td>
+            <td><button type="button" class="btn btn-warning">Edit</button>
+                <button type="button" class="btn btn-danger">Delete</button></td>
            
         </tr>
 
@@ -59,6 +66,8 @@
             <td>2003A51107</td>
             <td>ramya@gmail.com</td>
             <td>7030406578</td>
+            <td><button type="button" class="btn btn-warning">Edit</button>
+                <button type="button" class="btn btn-danger">Delete</button></td>
         </tr>
 
         <tr>
@@ -67,6 +76,8 @@
             <td>2003A51104</td>
             <td>akshitha@gmail.com</td>
             <td>9131456789</td>
+            <<td><button type="button" class="btn btn-warning">Edit</button>
+                <button type="button" class="btn btn-danger">Delete</button></td>
         </tr>
 </center>
         
