--- a/VS CODE/studentinfo.html
+++ b/VS CODE/studentinfo.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   
+    
     <title>Student Information</title>
     <style>
         table, th, td {
@@ -34,7 +36,7 @@
             <td>snehitha@gmail.com</td>
             <td>9050604356</td>
             <td><button type="button" class="btn btn-warning">Edit</button>
-                <button type="button" class="btn btn-danger">Delete</button></td>
+                <button type="button" class="btn btn-danger">Delete</i></button></td>
         </tr>
 
 
@@ -45,7 +47,7 @@
             <td>vinni@gmail.com</td>
             <td>9121546783</td>
             <td><button type="button" class="btn btn-warning">Edit</button>
-                <button type="button" class="btn btn-danger">Delete</button></td>
+                <button type="button" class="btn btn-danger">Delete</i></button></td>
         </tr>
 
 
